# VANE2

./: .gitignore  CMakeLists.txt  build.sh  dump.txt  env.sh  version.h.in
include/vane/: graphics.hpp  object.hpp  platform.hpp  transform.hpp  vanelog.hpp  vanetype.hpp  world.hpp
include/vane/ds/: inplace_list.hpp
include/vane/util/: cfgparser.hpp  file.hpp
script/: build.sh  env.sh  glslc.sh  setup.sh
src/: CMakeLists.txt  config.h.in  main.cpp
src/gpu_gl/: CMakeLists.txt  platform.cpp  shader.cpp  window.hpp
src/gpu_vk/: CMakeLists.txt  platform.cpp  shader.cpp  vk.hpp
src/vane/: CMakeLists.txt  graphics.cpp  world.cpp
src/vane/graphics/: gl.cpp  gl.hpp  shader.cpp
src/vane/platform/: CMakeLists.txt  platform.cpp  platform.hpp  platform_SDL2.cpp  platform_SDL2.hpp  platform_SDL3.cpp  platform_SDL3.hpp
src/vane/platform/gpu/: CMakeLists.txt  gpu.hpp
src/vane/platform/gpu/opengl/: CMakeLists.txt  gl.hpp  texture.cpp
src/vane/platform/gpu/vulkan/: CMakeLists.txt
src/vane/util/: file.cpp
src/vane/vanelog/: vanelog.cpp  vanelog.hpp
vane/: CMakeLists.txt
vane/cfg/: CMakeLists.txt
vane/cfg/h/vanecfg/: message.hpp
vane/data/shader/: particles.comp  quad.frag  quad.vert  ubo.glsl
vane/h/vane/: align.hpp  cfgparser.hpp  component.hpp  gamestate.hpp  inplace_stack.hpp  linkedlist.hpp  world.hpp
vane/inc/vane/: log.hpp  message.hpp  platform.hpp  platform.inl  rxSamplePort.hpp  sample_port.hpp  time.hpp  transform.hpp  type.hpp
vane/inc/vane/dsa/: bump_allocator.hpp
vane/inc/vane/game/: gameobject.hpp  gamestate.hpp  icomponent.hpp  icontainer.hpp
vane/inc/vane/platform/: impl_sdl3.hpp  iodev.hpp  platform_SDL3.hpp
vane/inc/vane/util/: align.hpp  funcptr.hpp
vane/inc_p/vane/detail/: platform.hpp
vane/include/vane/: iodev.hpp  log.hpp  platform.hpp  type.hpp
vane/include/vane/dsa/: inplace_queue.hpp  inplace_stack.hpp  linkedlist.hpp
vane/include/vane/util/: timer.hpp  vanetypeid.hpp
vane/src/: CMakeLists.txt  file.cpp  main.cpp  message.cpp
vane/src/.gfxlib/: CMakeLists.txt  gfxlib.hpp
vane/src/.gfxlib/gfxlib_cpu/: CMakeLists.txt  platform_impl.cpp  platform_impl.hpp  window_impl.cpp
vane/src/.gfxlib/gfxlib_vk/: platform_impl.hpp
vane/src/config/: CMakeLists.txt
vane/src/config/h/vane_cfg/: messages.hpp
vane/src/core/: CMakeLists.txt  assert.cpp  file.cpp  objmanager.cpp  port.cpp
vane/src/core/h/vane/: assert.hpp  file.hpp  metric.hpp  objmanager.hpp  port.hpp  type.hpp
vane/src/dsa/: CMakeLists.txt  bump_allocator.cpp  service.cpp
vane/src/dsa/h/vane/: inplace_list.hpp  inplace_queue.hpp  inplace_set.hpp  service.hpp  transform.hpp
vane/src/game/: CMakeLists.txt  component.cpp  component.hpp  container.cpp  container.hpp  controller.hpp  event.cpp  event.hpp  gameobject.cpp  gameobject.hpp  gamestate.cpp  object.cpp  object.hpp  state.cpp  state.hpp  world.cpp  world.hpp
vane/src/game/h/vane/: gameobject.hpp  gamestate.hpp  icomponent.hpp  icontainer.hpp
vane/src/game/interface/: icomponent.hpp
vane/src/gfxapi/: CMakeLists.txt  buffer.cpp  debugmsg.cpp  framebuffer.cpp  gfx_api.cpp  gfx_apictl.cpp  gfxapi_gl.cpp  gfxapi_impl.cpp  gfxresource.cpp  render_graph.cpp  shader.cpp  texture.cpp  underlyingtype.cpp  window.cpp
vane/src/gfxapi/h/vane/: gfxapi-old.hpp  gfxapi.hpp  gfxapi_gl.hpp  vk.hpp
vane/src/gfxapi/h/vane/gfxapi/: framebuffer.hpp  fwd.hpp  shader.hpp  texture.hpp
vane/src/gfxapi/h_/gfxapi/: buffer.hpp  camera.hpp  gfxapi_gl.hpp  gl.hpp  render_graph.hpp  underlyingtype.hpp  window.hpp
vane/src/gfxapi/resource/: framebuffer.cpp  shader.cpp  texture.cpp  window.cpp
vane/src/gfxapi_gl/h/gfxapi/: gfxapi_gl.hpp
vane/src/gfxapi_gl/h_/gfxapi/: gl.hpp
vane/src/gfxlib/: CMakeLists.txt
vane/src/gfxlib/gfxlib_cpu/: CMakeLists.txt  platform_impl.cpp  window_impl.cpp  window_impl.hpp
vane/src/gfxlib/gfxlib_gl/: gl_bindings.hpp  platform_impl.cpp  platform_impl.hpp  shader.cpp  texture.cpp  window_impl.cpp  window_impl.hpp
vane/src/gfxlib/gfxlib_vk/: CMakeLists.txt  platform_impl.cpp  window_impl.hpp
vane/src/gfxlib/gl/: CMakeLists.txt  gl_validation.cpp
vane/src/gpu_gl/: CMakeLists.txt  platform_impl.cpp  shader.cpp  texture.cpp  window_impl.cpp  window_impl.hpp
vane/src/gpu_vk/: CMakeLists.txt  window_impl.hpp
vane/src/io/: CMakeLists.txt  kb.cpp  kb.hpp  ms.cpp  ms.hpp
vane/src/ioapi/: CMakeLists.txt  ioapi.cpp
vane/src/ioapi/h/vane/: ioapi.hpp
vane/src/iolib/: CMakeLists.txt  iolib.hpp  kb.cpp  ms.cpp
vane/src/object/: CMakeLists.txt  object.hpp  observer.cpp  observer.hpp  world.cpp
vane/src/platform/: CMakeLists.txt  gl_bindings.hpp  platform.cpp  platform.hpp  platform_impl.cpp  shader.cpp  time.cpp  window.cpp  window_impl.cpp
vane/src/platform/h/: vane.hpp
vane/src/platform/h/vane/: iodevice.hpp  media_layer  platform.hpp  time.hpp  window.hpp
vane/src/platform/iodev/: devices.hpp  iodev.cpp  keyboard.cpp  mouse.cpp
vane/src/platform/sdl3/: CMakeLists.txt  platform_impl.cpp  time.cpp
vane/src/platform/sdl3/h/: BigBitch.hpp
vane/src/platform/sdl3/impl/: window.cpp  window.hpp  window_impl.cpp
vane/src/util/: CMakeLists.txt  file.cpp  timer.cpp
vane/src/vanelog/: ansi.hpp
vane/test/: CMakeLists.txt  main.cpp
vanedata/shader/: A.vert  B.glsl  quad.frag  quad2.glsl
vanegame/: CMakeLists.txt  main.cpp
vanetest/: CMakeLists.txt  main.cpp
